Prevent scrollbar on nav tooltip

--- a/css/style.less
+++ b/css/style.less
@@ -33,7 +33,7 @@ body {
 
 nav {
   position: absolute;
-  top: 25px;
+  top: 30px;
   right: 0;
 
   font-size: 0.75em;
@@ -41,7 +41,7 @@ nav {
   div {
     float: left;
     height: 25px;
-    margin-right: 25px;
+    margin-right: 30px;
   }
 
   i {
